unpackaged/main/default/objects/Merge_Assistant__c/Merge_Assistant__c.object-meta.xml
<CustomObject>
    <label>Merge Assistant</label>
    <nameField>
        <displayFormat>MA-{000000}</displayFormat>
        <label>Merge Assistant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Assistant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>