unpackaged/main/default/objects/Merge_Assistant__c/fields/Defendant_Caption__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Caption__c</fullName>
    <description>Horizontal Sting containing all Defendants</description>
    <inlineHelpText>Horizontal Sting containing all Defendants</inlineHelpText>
    <label>Defendant Caption Upper</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>