unpackaged/main/default/objects/Merge_Assistant__c/fields/Defendant_Caption_Lower__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Caption_Lower__c</fullName>
    <label>Defendant Caption Lower</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>