unpackaged/main/default/objects/Merge_Assistant__c/fields/Defendant_Defendants__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Defendants__c</fullName>
    <formula>IF(Number_of_Defendants__c &gt; 1, &quot;Defendants&quot;, &quot;Defendant&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant/Defendants</label>
    <type>Text</type>
</CustomField>