unpackaged/main/default/objects/Merge_Assistant__c/fields/Defendant_Gender__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Gender__c</fullName>
    <label>Defendant Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>