unpackaged/main/default/objects/Merge_Assistant__c/fields/Defendant_s_Defendants_Possession__c.field-meta.xml
<CustomField>
    <fullName>Defendant_s_Defendants_Possession__c</fullName>
    <formula>IF(Number_of_Defendants__c &gt; 1,&quot;Defendants&#39;&quot;,&quot;Defendant&#39;s&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant&#39;s/Defendants&#39; Possession</label>
    <type>Text</type>
</CustomField>