unpackaged/main/default/objects/Merge_Assistant__c/fields/Defendants_Caption_Block_Lower__c.field-meta.xml
<CustomField>
    <fullName>Defendants_Caption_Block_Lower__c</fullName>
    <label>Defendants Caption Block Lower</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>