unpackaged/main/default/objects/Merge_Assistant__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Merge Assistant</relationshipLabel>
    <relationshipName>Merge_Assistant</relationshipName>
    <type>Lookup</type>
</CustomField>