unpackaged/main/default/objects/Merge_Assistant__c/fields/Number_of_Plaintiffs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Plaintiffs__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Plaintiffs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>