unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Agree_Agrees__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Agree_Agrees__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;agree&quot;, &quot;agrees&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Agree/Agrees</label>
    <type>Text</type>
</CustomField>