unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Authorize_Authorizes__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Authorize_Authorizes__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;authorize&quot;,&quot;authorizes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Authorize/Authorizes</label>
    <type>Text</type>
</CustomField>