unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_believe_believes__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_believe_believes__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;believe&quot;,&quot;believes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff believe / believes</label>
    <type>Text</type>
</CustomField>