unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Certify_Certifies__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Certify_Certifies__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;certifies&quot;,&quot;certify&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff - Certify/Certifies</label>
    <type>Text</type>
</CustomField>