unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Client_Clients__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Client_Clients__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;clients&quot;, &quot;client&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Client/Clients</label>
    <type>Text</type>
</CustomField>