unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Client_Clients_Caps__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Client_Clients_Caps__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;Clients&quot;, &quot;Client&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Client/Clients Caps</label>
    <type>Text</type>
</CustomField>