unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Clients_Client_s_Posession__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Clients_Client_s_Posession__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;clients&#39;&quot;, &quot;client&#39;s&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Clients&#39;/Client&#39;s Posession</label>
    <type>Text</type>
</CustomField>