unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Clients_Client_s_Posession_Ca__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Clients_Client_s_Posession_Ca__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;Clients&#39;&quot;, &quot;Client&#39;s&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clients&#39;/Client&#39;s Possession Cap</label>
    <type>Text</type>
</CustomField>