unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Damage_Damages__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Damage_Damages__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;damages&quot;, &quot;damage&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Damage/Damages</label>
    <type>Text</type>
</CustomField>