unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Demand_Demands__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Demand_Demands__c</fullName>
    <formula>If(Number_of_Plaintiffs__c &gt; 1, &quot;demand&quot;, &quot;demands&quot;)</formula>
    <label>Plaintiff Demand/Demands</label>
    <type>Text</type>
</CustomField>