unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Deny_Denies__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Deny_Denies__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;deny&quot;, &quot;denies&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Deny/Denies</label>
    <type>Text</type>
</CustomField>