unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_designate_designates__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_designate_designates__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;designate&quot;,&quot;designates&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff designate / designates</label>
    <type>Text</type>
</CustomField>