unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Do_Does__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Do_Does__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;do&quot;,&quot;does&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Do/Does</label>
    <type>Text</type>
</CustomField>