unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_expect_expects__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_expect_expects__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;expect&quot;,&quot;expects&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff expect / expects</label>
    <type>Text</type>
</CustomField>