unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_File_Files__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_File_Files__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;file&quot;,&quot;files&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff File/Files</label>
    <type>Text</type>
</CustomField>