unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Has_Have__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Has_Have__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;have&quot;, &quot;has&quot;)</formula>
    <label>Plaintiff Has/Have</label>
    <type>Text</type>
</CustomField>