unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_He_She_They__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_He_She_They__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;they&quot;,
IF(ISPICKVAL(Plaintiff_Gender__c, &quot;Male&quot;),&quot;he&quot;,
IF(ISPICKVAL(Plaintiff_Gender__c,&quot;Female&quot;),&quot;she&quot;,
NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff  He/She/They</label>
    <type>Text</type>
</CustomField>