unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Him_Her_Us__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Him_Her_Us__c</fullName>
    <formula>If(
(Number_of_Plaintiffs__c &gt; 1), &quot;us&quot;,
IF(
ISPICKVAL(Plaintiff_Gender__c,&quot;Male&quot;),&quot;him&quot;,
IF(
ISPICKVAL(Plaintiff_Gender__c,&quot;Female&quot;),&quot;her&quot;,
NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff - Him/Her/Us</label>
    <type>Text</type>
</CustomField>