unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_His_Her_Our__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_His_Her_Our__c</fullName>
    <formula>If(
(Number_of_Plaintiffs__c &gt; 1), &quot;our&quot;,
IF(
ISPICKVAL(Plaintiff_Gender__c,&quot;Male&quot;),&quot;his&quot;,
IF(
ISPICKVAL(Plaintiff_Gender__c,&quot;Female&quot;),&quot;her&quot;,
NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff - His/Her/Our</label>
    <type>Text</type>
</CustomField>