unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_his_her_their__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_his_her_their__c</fullName>
    <formula>If(
				(Number_of_Plaintiffs__c &gt; 1), &quot;their&quot;,
					IF(
		    ISPICKVAL(Plaintiff_Gender__c,&quot;Male&quot;),&quot;his&quot;,
				    IF(
								 ISPICKVAL(Plaintiff_Gender__c,&quot;Female&quot;),&quot;her&quot;,
												NULL)))</formula>
    <label>Plaintiff his/her/their</label>
    <type>Text</type>
</CustomField>