unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Homeowner_Homeowners__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Homeowner_Homeowners__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;homeowners&quot;, &quot;homeowner&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Homeowner/Homeowners</label>
    <type>Text</type>
</CustomField>