unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Incorporate_Incorporates__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Incorporate_Incorporates__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;incorporate&quot;,&quot;incorporates&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Incorporate/Incorporates</label>
    <type>Text</type>
</CustomField>