unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Individual_Individuals__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Individual_Individuals__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;individuals&quot;, &quot;individual&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Individual/Individuals</label>
    <type>Text</type>
</CustomField>