unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Insured_Insureds__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Insured_Insureds__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;insureds&quot;, &quot;insured&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Insured/Insureds</label>
    <type>Text</type>
</CustomField>