unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Insured_s_Insureds_Posession__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Insured_s_Insureds_Posession__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;insureds&#39;&quot;, &quot;insured&#39;s&quot;)</formula>
    <label>Plaintiff Insured&#39;s/Insureds&#39; Posession</label>
    <type>Text</type>
</CustomField>