unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Is_An_Are__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Is_An_Are__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;are&quot;, &quot;is&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff - Is/An/Are</label>
    <type>Text</type>
</CustomField>