unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Make_Makes__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Make_Makes__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;makes&quot;, &quot;make&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Make/Makes</label>
    <type>Text</type>
</CustomField>