unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Me_Us__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Me_Us__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;us&quot;, &quot;me&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Me/Us</label>
    <type>Text</type>
</CustomField>