unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_My_Our__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_My_Our__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;our&quot;, &quot;my&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff My/Our</label>
    <type>Text</type>
</CustomField>