unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Object_Objects__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Object_Objects__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;object&quot;, &quot;objects&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Object/Objects</label>
    <type>Text</type>
</CustomField>