unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Own_Owns__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Own_Owns__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;own&quot;, &quot;owns&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Own/Owns</label>
    <type>Text</type>
</CustomField>