unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Owner_Owners__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Owner_Owners__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;owners&quot;,&quot;owner&quot;)</formula>
    <label>Plaintiff Owner/Owners</label>
    <type>Text</type>
</CustomField>