unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Permit_Permits__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Permit_Permits__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;permit&quot;,&quot;permits&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Permit/Permits</label>
    <type>Text</type>
</CustomField>