unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Plaintiffs__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Plaintiffs__c</fullName>
    <formula>If(Number_of_Plaintiffs__c &gt; 1, &quot;Plaintiffs&quot;, &quot;Plaintiff&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff/Plaintiffs</label>
    <type>Text</type>
</CustomField>