unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Plan_Plans__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Plan_Plans__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;plan&quot;, &quot;plans&quot;)</formula>
    <label>Plaintiff Plan/Plans</label>
    <type>Text</type>
</CustomField>