unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Reallege__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Reallege__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;reallege&quot; ,&quot;realleges&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Reallege</label>
    <type>Text</type>
</CustomField>