unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Refer_Refers__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Refer_Refers__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;refer&quot;, &quot;refers&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Refer/Refers</label>
    <type>Text</type>
</CustomField>