unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Request_Requests__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Request_Requests__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;requests&quot;, &quot;request&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Request/Requests</label>
    <type>Text</type>
</CustomField>