unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Reserve_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Reserve_Reserves__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;reserve&quot;,&quot;reserves&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Reserve/Reserves</label>
    <type>Text</type>
</CustomField>