unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_s_Plaintiffs_Posession__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_s_Plaintiffs_Posession__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;Plaintiffs&#39;&quot;,&quot;Plaintiff&#39;s&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff&#39;s/Plaintiffs&#39; Posession</label>
    <type>Text</type>
</CustomField>