unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Submit_Submits__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Submit_Submits__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;submit&quot;, &quot;submits&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Submit/Submits</label>
    <type>Text</type>
</CustomField>