unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Understand_Understands__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Understand_Understands__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1, &quot;understand&quot;, &quot;understands&quot;)</formula>
    <label>Plaintiff Understand/Understands</label>
    <type>Text</type>
</CustomField>