unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_Was_Were__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Was_Were__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;were&quot;,&quot;was&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff Was/Were</label>
    <type>Text</type>
</CustomField>