unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiff_We_I_Cap__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_We_I_Cap__c</fullName>
    <formula>IF(Number_of_Plaintiffs__c &gt; 1,&quot;We&quot;,&quot;I&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plaintiff We/I Cap</label>
    <type>Text</type>
</CustomField>