unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiffs_Caption__c.field-meta.xml
<CustomField>
    <fullName>Plaintiffs_Caption__c</fullName>
    <description>Horizontal Sting containing all Plaintiffs</description>
    <inlineHelpText>Horizontal Sting containing all Plaintiffs</inlineHelpText>
    <label>Plaintiffs Caption Upper</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>