unpackaged/main/default/objects/Merge_Assistant__c/fields/Plaintiffs_Caption_Block_Lower__c.field-meta.xml
<CustomField>
    <fullName>Plaintiffs_Caption_Block_Lower__c</fullName>
    <label>Plaintiffs Caption Block Lower</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>